# akonadi-contacts

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  CMakePresets.json  KF5AkonadiContactConfig.cmake.in  README.md  akonadi-contacts.categories  akonadi-contacts.renamecategories  metainfo.yaml
akonadi-contact/: .reviewboardrc  CMakeLists.txt  KF5AkonadiContactConfig.cmake.in  Messages.sh
akonadi-contact/autotests/: CMakeLists.txt  emailaddressselectiondialogtest.cpp  emailaddressselectionwidgettest.cpp
akonadi-contact/src/: CMakeLists.txt  Messages.sh  abstractcontacteditorwidget_p.h  abstractcontactformatter.cpp  abstractcontactformatter.h  abstractcontactgroupformatter.cpp  abstractcontactgroupformatter.h  akonadi_contact_debug.cpp  akonadi_contact_debug.h  attributeregistrar.cpp  collectionfiltermodel.cpp  collectionfiltermodel_p.h  config-akonadi-contact.h.cmake  contactcompletionmodel.cpp  contactcompletionmodel_p.h  contactdefaultactions.cpp  contactdefaultactions.h  contacteditor.cpp  contacteditor.h  contacteditordialog.cpp  contacteditordialog.h  contacteditorpageplugin.h  contactgroupeditor.cpp  contactgroupeditor.h  contactgroupeditor.ui  contactgroupeditor_p.h  contactgroupeditordelegate.cpp  contactgroupeditordelegate_p.h  contactgroupeditordialog.cpp  contactgroupeditordialog.h  contactgroupexpandjob.cpp  contactgroupexpandjob.h  contactgrouplineedit.cpp  contactgrouplineedit_p.h  contactgroupmodel.cpp  contactgroupmodel_p.h  contactgroupsearchjob.cpp  contactgroupsearchjob.h  contactgroupviewer.cpp  contactgroupviewer.h  (+48 more)
akonadi-contact/tests/: CMakeLists.txt  emailaddressselectiondialogtest.cpp  emailaddressselectionwidgettest.cpp  emailaddressselectionwidgettest.h
akonadi-kabc/: .reviewboardrc  CMakeLists.txt  KF5AkonadiKAbcConfig.cmake.in
akonadi-kabc/src/: CMakeLists.txt
kcm/: CMakeLists.txt  Messages.sh  akonadicontact_actions.desktop  akonadicontact_actions.json  akonadicontactactions.ui  kcmakonadicontactactions.cpp  kcmakonadicontactactions.h
serializers/: CMakeLists.txt  Messages.sh  akonadi_serializer_addressee.cpp  akonadi_serializer_addressee.desktop  akonadi_serializer_addressee.h  akonadi_serializer_contactgroup.cpp  akonadi_serializer_contactgroup.desktop  akonadi_serializer_contactgroup.h
serializers/autotests/: CMakeLists.txt  addresseeserializertest.cpp
src/akonadi-contacts/: CMakeLists.txt  KF5AkonadiContactConfig.cmake.in  KPimAkonadiContactConfig.cmake.in  abstractcontactformatter.cpp  abstractcontactformatter.h  abstractcontactgroupformatter.cpp  abstractcontactgroupformatter.h  abstractemailaddressselectiondialog.cpp  abstractemailaddressselectiondialog.h  akonadi-contacts.categories  akonadicontact_private_export.h  autoqpointer_p.h  collectionfiltermodel.cpp  collectionfiltermodel_p.h  config-akonadi-contact.h.cmake  contactcompletionmodel.cpp  contactcompletionmodel_p.h  contactdefaultactions.cpp  contactdefaultactions.h  contacteditor.cpp  contacteditor.h  contacteditordialog.cpp  contacteditordialog.h  contacteditorpageplugin.h  contactgroupeditor.cpp  contactgroupeditor.h  contactgroupeditor.ui  contactgroupeditor_p.h  contactgroupeditordelegate.cpp  contactgroupeditordelegate_p.h  contactgroupeditordialog.cpp  contactgroupeditordialog.h  contactgroupmodel.cpp  contactgroupmodel_p.h  contactgroupviewer.cpp  contactgroupviewer.h  contactgroupviewerdialog.cpp  contactgroupviewerdialog.h  contactmetadataakonadi.cpp  contactmetadataakonadi_p.h  (+41 more)
src/akonadi-contacts-core/: CMakeLists.txt  KPimAkonadiContactCoreConfig.cmake.in  abstractcontactformatter.cpp  abstractcontactformatter.h  abstractcontactgroupformatter.cpp  abstractcontactgroupformatter.h  akonadi-contacts-core.qdoc  akonadi-contacts-core.qdocconf  akonadi-contacts-index.qdoc  akonadi_contact_core_private_export.h  collectionfiltermodel.cpp  collectionfiltermodel_p.h  contactcompletionmodel.cpp  contactcompletionmodel_p.h  contactgroupmodel.cpp  contactgroupmodel_p.h  contactparts.cpp  contactparts.h  contactsfilterproxymodel.cpp  contactsfilterproxymodel.h  contactstreemodel.cpp  contactstreemodel.h  emailaddressselection.cpp  emailaddressselection.h  emailaddressselection_p.h  emailaddressselectionmodel.cpp  emailaddressselectionmodel.h  emailaddressselectionproxymodel.cpp  emailaddressselectionproxymodel_p.h  leafextensionproxymodel.cpp  leafextensionproxymodel_p.h  standardcontactformatter.cpp  standardcontactformatter.h  standardcontactgroupformatter.cpp  standardcontactgroupformatter.h
src/akonadi-contacts-widgets/: CMakeLists.txt  KPimAkonadiContactWidgetsConfig.cmake.in  KPimContactEditorConfig.cmake.in  abstractcontacteditorwidget_p.h  abstractemailaddressselectiondialog.cpp  abstractemailaddressselectiondialog.h  akonadi-contacts-widgets.qdoc  akonadi-contacts-widgets.qdocconf  akonadi_contact_widgets_private_export.h  contacteditor.cpp  contacteditor.h  contacteditor_private_export.h  contacteditordialog.cpp  contacteditordialog.h  contacteditorpageplugin.h  contactgroupeditor.cpp  contactgroupeditor.h  contactgroupeditor_p.h  contactgroupeditordelegate.cpp  contactgroupeditordelegate_p.h  contactgroupeditordialog.cpp  contactgroupeditordialog.h  contactgroupviewer.cpp  contactgroupviewer.h  contactmetadataakonadi.cpp  contactmetadataakonadi_p.h  contactmetadatabase.cpp  contactmetadatabase_p.h  contactviewer.cpp  contactviewer.h  contactviewerdialog.cpp  contactviewerdialog.h  customfieldmanager.cpp  customfieldmanager_p.h  customfields.cpp  customfields_p.h  emailaddressrequester.cpp  emailaddressrequester.h  emailaddressselectiondialog.cpp  emailaddressselectiondialog.h  (+8 more)
src/contact-editor/: CMakeLists.txt  KF5ContactEditorConfig.cmake.in  KPimContactEditorConfig.cmake.in  abstractcontacteditorwidget_p.h  autoqpointer_p.h  config-contact-editor.h.cmake  contact-editor.categories  contacteditor.cpp  contacteditor.h  contacteditor_private_export.h  contacteditordialog.cpp  contacteditordialog.h  contacteditorpageplugin.h  contactgroupviewer.cpp  contactgroupviewer.h  contactmetadataakonadi_p.h  contactviewer.cpp  (+9 more)
(+1139 files in other folders)
